--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@chainlink/contracts": "^0.1.6"
+    "@chainlink/contracts": "^0.1.6",
+    "@openzeppelin/contracts-upgradeable": "^4.0.0"
   },
   "devDependencies": {
     "@chainlink/belt": "^0.0.3",
     "@chainlink/test-helpers": "0.0.5",
-    "@openzeppelin/contracts-upgradeable": "3.4.1-solc-0.7-2",
     "@openzeppelin/test-helpers": "^0.5.10",
     "@openzeppelin/truffle-upgrades": "^1.5.0",
     "@truffle/hdwallet-provider": "1.2.1",
